--- a/client/index.html
+++ b/client/index.html
@@ -6,6 +6,18 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1"
     />
+    <title>동물 성향 테스트 - 나의 동물 성향을 알아보세요!</title>
+    <meta name="description" content="재미있는 동물 성향 테스트로 나와 가장 닮은 동물을 찾아보세요. 과학적 근거를 바탕으로 한 성격 분석과 함께 8가지 동물 중 나의 성향을 발견해보세요." />
+    <meta name="keywords" content="동물 성향 테스트, 성격 테스트, 심리 테스트, 동물 성격 진단, 성향 분석, personality test" />
+    <meta name="author" content="Animal Spirit Test" />
+    <meta property="og:title" content="동물 성향 테스트 - 나의 동물 성향을 알아보세요!" />
+    <meta property="og:description" content="재미있는 동물 성향 테스트로 나와 가장 닮은 동물을 찾아보세요." />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://animal-spirit-test.netlify.app/" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -21,10 +33,5 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <!-- This is a replit script which adds a banner on the top of the page when opened in development mode outside the replit environment -->
-    <script
-      type="text/javascript"
-      src="https://replit.com/public/js/replit-dev-banner.js"
-    ></script>
   </body>
 </html>
