--- a/client/index.html
+++ b/client/index.html
@@ -30,7 +30,10 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="format-detection" content="telephone=no" />
-    
+
+    <!-- Google Search Console Verification -->
+    <meta name="google-site-verification" content="IG8WS3tySqAio9QyiegLcPHcDb2JpQtjg8TY7dDVLLE" />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://animal-spirit-test.netlify.app/" />
